# dandelion-multimodal-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dandelion-multimodal-benchmark/: .gitignore  CMakeLists.txt  README.md
dandelion-multimodal-benchmark/.github/workflows/: ci.yml
dandelion-multimodal-benchmark/bench/harness/: run_monolith.py
dandelion-multimodal-benchmark/datasets/audio/: audio_manifest.jsonl
dandelion-multimodal-benchmark/datasets/images/: image_manifest.jsonl
dandelion-multimodal-benchmark/datasets/text/: samples.jsonl
dandelion-multimodal-benchmark/models/: MANIFEST.md
dandelion-multimodal-benchmark/results/raw/dandelion_coarse/: results.jsonl
dandelion-multimodal-benchmark/results/raw/dandelion_fine/: results.jsonl
dandelion-multimodal-benchmark/results/raw/dandelion_monolithic/: results.jsonl
dandelion-multimodal-benchmark/results/raw/monolith/: results.jsonl
dandelion-multimodal-benchmark/scripts/: inference_server.py  requirements_inference.txt  run_dandelion_bench.py
dandelion-multimodal-benchmark/scripts/infra/: _build_elfs.sh  _build_sdk.sh  _copy_bins.sh  _copy_elfs.sh  _debug_response.sh  _patch_sdk.sh  _smoke_test.sh  run_dandelion.sh  wsl_build.sh  wsl_setup.sh
dandelion-multimodal-benchmark/scripts/model_conversion/: convert_to_onnx.py  download_models.sh  gen_audio_samples.py
dandelion-multimodal-benchmark/src/dandelion/: CMakeLists.txt  dandelion_stub.cpp
dandelion-multimodal-benchmark/src/dandelion/common/: json_writer.cpp  json_writer.h  metrics.cpp  metrics.h
dandelion-multimodal-benchmark/src/dandelion/dag/: coarse.dc  coarse_preload.json  fine.dc  fine_preload.json  mono_preload.json  monolithic.dc
dandelion-multimodal-benchmark/src/dandelion/nodes/: CMakeLists.txt  audio_asr.c  classify.c  coarse_audio.c  coarse_image.c  coarse_text.c  common.h  format_output.c  image_ocr.c  ingress.c  mono_all.c  normalize.c
dandelion-multimodal-benchmark/src/lambda_baseline/: CMakeLists.txt  main_stub.cpp
dandelion-multimodal-benchmark/src/monolith/: CMakeLists.txt  audio_pipeline.cpp  audio_pipeline.h  classifier.cpp  classifier.h  image_pipeline.cpp  image_pipeline.h  main.cpp  main_stub.cpp  text_pipeline.cpp  text_pipeline.h  wav_reader.h
src/dandelion/: CMakeLists.txt  main.cpp
src/lambda_baseline/: CMakeLists.txt  main.cpp
src/monolith/: CMakeLists.txt  main.cpp
